@@ -1,5 +1,5 @@
 //
-// "$Id: Fl.H,v 1.8.2.11.2.16 2002/07/08 15:14:37 easysw Exp $"
+// "$Id: Fl.H,v 1.8.2.11.2.17 2002/07/14 19:08:25 easysw Exp $"
 //
 // Main header file for the Fast Light Tool Kit (FLTK).
 //
@@ -41,33 +41,33 @@ typedef void (Fl_Box_Draw_F)(int,int,int,int, Fl_Color);
 
 typedef void (*Fl_Timeout_Handler)(void*);
 
-class Fl {
+class FL_EXPORT Fl {
   Fl() {}; // no constructor!
 
 public: // should be private!
 
-  static FL_EXPORT int e_number;
-  static FL_EXPORT int e_x,e_y,e_x_root,e_y_root;
-  static FL_EXPORT int e_dx, e_dy;
-  static FL_EXPORT int e_state;
-  static FL_EXPORT int e_clicks;
-  static FL_EXPORT int e_is_click;
-  static FL_EXPORT int e_keysym;
-  static FL_EXPORT char* e_text;
-  static FL_EXPORT int e_length;
-  static FL_EXPORT Fl_Widget* belowmouse_;
-  static FL_EXPORT Fl_Widget* pushed_;
-  static FL_EXPORT Fl_Widget* focus_;
-  static FL_EXPORT int damage_;
-  static FL_EXPORT Fl_Widget* selection_owner_;
-  static FL_EXPORT Fl_Window* modal_;
-  static FL_EXPORT Fl_Window* grab_;
-  static FL_EXPORT int compose_state;
-  static FL_EXPORT int visible_focus_;
-  static FL_EXPORT int dnd_text_ops_;
+  static int e_number;
+  static int e_x,e_y,e_x_root,e_y_root;
+  static int e_dx, e_dy;
+  static int e_state;
+  static int e_clicks;
+  static int e_is_click;
+  static int e_keysym;
+  static char* e_text;
+  static int e_length;
+  static Fl_Widget* belowmouse_;
+  static Fl_Widget* pushed_;
+  static Fl_Widget* focus_;
+  static int damage_;
+  static Fl_Widget* selection_owner_;
+  static Fl_Window* modal_;
+  static Fl_Window* grab_;
+  static int compose_state;
+  static int visible_focus_;
+  static int dnd_text_ops_;
   static void damage(int x) {damage_ = x;}
 
-  static FL_EXPORT void (*idle)();
+  static void (*idle)();
 
   static const char* scheme_;
   static Fl_Image* scheme_bg_;
@@ -75,23 +75,23 @@ public: // should be private!
 public:
 
   // API version number
-  static FL_EXPORT double version();
+  static double version();
 
   // argument parsers:
-  static FL_EXPORT int arg(int, char**, int&);
-  static FL_EXPORT int args(int, char**, int&, int (*)(int,char**,int&) = 0);
-  static FL_EXPORT const char* const help;
-  static FL_EXPORT void args(int, char**);
+  static int arg(int, char**, int&);
+  static int args(int, char**, int&, int (*)(int,char**,int&) = 0);
+  static const char* const help;
+  static void args(int, char**);
 
   // things called by initialization:
-  static FL_EXPORT void display(const char*);
-  static FL_EXPORT int visual(int);
-  static FL_EXPORT int gl_visual(int, int *alist=0);
-  static FL_EXPORT void own_colormap();
-  static FL_EXPORT void get_system_colors();
-  static FL_EXPORT void foreground(uchar, uchar, uchar);
-  static FL_EXPORT void background(uchar, uchar, uchar);
-  static FL_EXPORT void background2(uchar, uchar, uchar);
+  static void display(const char*);
+  static int visual(int);
+  static int gl_visual(int, int *alist=0);
+  static void own_colormap();
+  static void get_system_colors();
+  static void foreground(uchar, uchar, uchar);
+  static void background(uchar, uchar, uchar);
+  static void background2(uchar, uchar, uchar);
 
   // schemes:
   static int scheme(const char*);
@@ -99,141 +99,141 @@ public:
   static int reload_scheme();
 
   // execution:
-  static FL_EXPORT int wait();
-  static FL_EXPORT double wait(double time);
-  static FL_EXPORT int check();
-  static FL_EXPORT int ready();
-  static FL_EXPORT int run();
-  static FL_EXPORT Fl_Widget* readqueue();
-  static FL_EXPORT void add_timeout(double t, Fl_Timeout_Handler,void* = 0);
-  static FL_EXPORT void repeat_timeout(double t, Fl_Timeout_Handler,void* = 0);
-  static FL_EXPORT int  has_timeout(Fl_Timeout_Handler, void* = 0);
-  static FL_EXPORT void remove_timeout(Fl_Timeout_Handler, void* = 0);
-  static FL_EXPORT void add_check(Fl_Timeout_Handler, void* = 0);
-  static FL_EXPORT int  has_check(Fl_Timeout_Handler, void* = 0);
-  static FL_EXPORT void remove_check(Fl_Timeout_Handler, void* = 0);
-  static FL_EXPORT void add_fd(int fd, int when, void (*cb)(int,void*),void* =0);
-  static FL_EXPORT void add_fd(int fd, void (*cb)(int, void*), void* = 0);
-  static FL_EXPORT void remove_fd(int, int when);
-  static FL_EXPORT void remove_fd(int);
-  static FL_EXPORT void add_idle(void (*cb)(void*), void* = 0);
-  static FL_EXPORT int  has_idle(void (*cb)(void*), void* = 0);
-  static FL_EXPORT void remove_idle(void (*cb)(void*), void* = 0);
-  static FL_EXPORT int damage() {return damage_;}
-  static FL_EXPORT void redraw();
-  static FL_EXPORT void flush();
-  static FL_EXPORT void (*warning)(const char*, ...);
-  static FL_EXPORT void (*error)(const char*, ...);
-  static FL_EXPORT void (*fatal)(const char*, ...);
-  static FL_EXPORT Fl_Window* first_window();
-  static FL_EXPORT void first_window(Fl_Window*);
-  static FL_EXPORT Fl_Window* next_window(const Fl_Window*);
-  static FL_EXPORT Fl_Window* modal() {return modal_;}
-  static FL_EXPORT Fl_Window* grab() {return grab_;}
-  static FL_EXPORT void grab(Fl_Window*);
+  static int wait();
+  static double wait(double time);
+  static int check();
+  static int ready();
+  static int run();
+  static Fl_Widget* readqueue();
+  static void add_timeout(double t, Fl_Timeout_Handler,void* = 0);
+  static void repeat_timeout(double t, Fl_Timeout_Handler,void* = 0);
+  static int  has_timeout(Fl_Timeout_Handler, void* = 0);
+  static void remove_timeout(Fl_Timeout_Handler, void* = 0);
+  static void add_check(Fl_Timeout_Handler, void* = 0);
+  static int  has_check(Fl_Timeout_Handler, void* = 0);
+  static void remove_check(Fl_Timeout_Handler, void* = 0);
+  static void add_fd(int fd, int when, void (*cb)(int,void*),void* =0);
+  static void add_fd(int fd, void (*cb)(int, void*), void* = 0);
+  static void remove_fd(int, int when);
+  static void remove_fd(int);
+  static void add_idle(void (*cb)(void*), void* = 0);
+  static int  has_idle(void (*cb)(void*), void* = 0);
+  static void remove_idle(void (*cb)(void*), void* = 0);
+  static int damage() {return damage_;}
+  static void redraw();
+  static void flush();
+  static void (*warning)(const char*, ...);
+  static void (*error)(const char*, ...);
+  static void (*fatal)(const char*, ...);
+  static Fl_Window* first_window();
+  static void first_window(Fl_Window*);
+  static Fl_Window* next_window(const Fl_Window*);
+  static Fl_Window* modal() {return modal_;}
+  static Fl_Window* grab() {return grab_;}
+  static void grab(Fl_Window*);
 
   // event information:
-  static FL_EXPORT int event()		{return e_number;}
-  static FL_EXPORT int event_x()	{return e_x;}
-  static FL_EXPORT int event_y()	{return e_y;}
-  static FL_EXPORT int event_x_root()	{return e_x_root;}
-  static FL_EXPORT int event_y_root()	{return e_y_root;}
-  static FL_EXPORT int event_dx()	{return e_dx;}
-  static FL_EXPORT int event_dy()	{return e_dy;}
-  static FL_EXPORT void get_mouse(int &,int &);
-  static FL_EXPORT int event_clicks()	{return e_clicks;}
-  static FL_EXPORT void event_clicks(int i) {e_clicks = i;}
-  static FL_EXPORT int event_is_click()	{return e_is_click;}
-  static FL_EXPORT void event_is_click(int i) {e_is_click = i;} // only 0 works!
-  static FL_EXPORT int event_button()	{return e_keysym-FL_Button;}
-  static FL_EXPORT int event_state()	{return e_state;}
-  static FL_EXPORT int event_state(int i) {return e_state&i;}
-  static FL_EXPORT int event_key()	{return e_keysym;}
-  static FL_EXPORT int event_key(int);
-  static FL_EXPORT int get_key(int);
-  static FL_EXPORT const char* event_text() {return e_text;}
-  static FL_EXPORT int event_length() {return e_length;}
-  static FL_EXPORT int compose(int &del);
-  static FL_EXPORT void compose_reset() {compose_state = 0;}
-  static FL_EXPORT int event_inside(int,int,int,int);
-  static FL_EXPORT int event_inside(const Fl_Widget*);
-  static FL_EXPORT int test_shortcut(int);
+  static int event()		{return e_number;}
+  static int event_x()	{return e_x;}
+  static int event_y()	{return e_y;}
+  static int event_x_root()	{return e_x_root;}
+  static int event_y_root()	{return e_y_root;}
+  static int event_dx()	{return e_dx;}
+  static int event_dy()	{return e_dy;}
+  static void get_mouse(int &,int &);
+  static int event_clicks()	{return e_clicks;}
+  static void event_clicks(int i) {e_clicks = i;}
+  static int event_is_click()	{return e_is_click;}
+  static void event_is_click(int i) {e_is_click = i;} // only 0 works!
+  static int event_button()	{return e_keysym-FL_Button;}
+  static int event_state()	{return e_state;}
+  static int event_state(int i) {return e_state&i;}
+  static int event_key()	{return e_keysym;}
+  static int event_key(int);
+  static int get_key(int);
+  static const char* event_text() {return e_text;}
+  static int event_length() {return e_length;}
+  static int compose(int &del);
+  static void compose_reset() {compose_state = 0;}
+  static int event_inside(int,int,int,int);
+  static int event_inside(const Fl_Widget*);
+  static int test_shortcut(int);
 
   // event destinations:
-  static FL_EXPORT int handle(int, Fl_Window*);
-  static FL_EXPORT Fl_Widget* belowmouse() {return belowmouse_;}
-  static FL_EXPORT void belowmouse(Fl_Widget*);
-  static FL_EXPORT Fl_Widget* pushed()	{return pushed_;}
-  static FL_EXPORT void pushed(Fl_Widget*);
-  static FL_EXPORT Fl_Widget* focus()	{return focus_;}
-  static FL_EXPORT void focus(Fl_Widget*);
-  static FL_EXPORT void add_handler(int (*h)(int));
-  static FL_EXPORT void remove_handler(int (*h)(int));
+  static int handle(int, Fl_Window*);
+  static Fl_Widget* belowmouse() {return belowmouse_;}
+  static void belowmouse(Fl_Widget*);
+  static Fl_Widget* pushed()	{return pushed_;}
+  static void pushed(Fl_Widget*);
+  static Fl_Widget* focus()	{return focus_;}
+  static void focus(Fl_Widget*);
+  static void add_handler(int (*h)(int));
+  static void remove_handler(int (*h)(int));
 
   // cut/paste:
-  static FL_EXPORT void copy(const char* stuff, int len, int clipboard = 0);
-  static FL_EXPORT void paste(Fl_Widget &receiver, int clipboard /*=0*/);
-  static FL_EXPORT int dnd();
+  static void copy(const char* stuff, int len, int clipboard = 0);
+  static void paste(Fl_Widget &receiver, int clipboard /*=0*/);
+  static int dnd();
   // These are for back-compatability only:
-  static FL_EXPORT Fl_Widget* selection_owner() {return selection_owner_;}
-  static FL_EXPORT void selection_owner(Fl_Widget*);
-  static FL_EXPORT void selection(Fl_Widget &owner, const char*, int len);
-  static FL_EXPORT void paste(Fl_Widget &receiver);
+  static Fl_Widget* selection_owner() {return selection_owner_;}
+  static void selection_owner(Fl_Widget*);
+  static void selection(Fl_Widget &owner, const char*, int len);
+  static void paste(Fl_Widget &receiver);
 
   // screen size:
 #if defined(WIN32) || defined(__APPLE__)
-  static FL_EXPORT int x();
-  static FL_EXPORT int y();
+  static int x();
+  static int y();
 #else
-  static FL_EXPORT int x() {return 0;}
-  static FL_EXPORT int y() {return 0;}
+  static int x() {return 0;}
+  static int y() {return 0;}
 #endif /* WIN32 || __APPLE__ */
-  static FL_EXPORT int w();
-  static FL_EXPORT int h();
+  static int w();
+  static int h();
 
   // color map:
-  static FL_EXPORT void	set_color(Fl_Color, uchar, uchar, uchar);
-  static FL_EXPORT void	set_color(Fl_Color, unsigned);
-  static FL_EXPORT unsigned get_color(Fl_Color);
-  static FL_EXPORT void	get_color(Fl_Color, uchar&, uchar&, uchar&);
-  static FL_EXPORT void	free_color(Fl_Color, int overlay = 0);
+  static void	set_color(Fl_Color, uchar, uchar, uchar);
+  static void	set_color(Fl_Color, unsigned);
+  static unsigned get_color(Fl_Color);
+  static void	get_color(Fl_Color, uchar&, uchar&, uchar&);
+  static void	free_color(Fl_Color, int overlay = 0);
 
   // fonts:
-  static FL_EXPORT const char* get_font(Fl_Font);
-  static FL_EXPORT const char* get_font_name(Fl_Font, int* attributes = 0);
-  static FL_EXPORT int get_font_sizes(Fl_Font, int*& sizep);
-  static FL_EXPORT void set_font(Fl_Font, const char*);
-  static FL_EXPORT void set_font(Fl_Font, Fl_Font);
-  static FL_EXPORT Fl_Font set_fonts(const char* = 0);
+  static const char* get_font(Fl_Font);
+  static const char* get_font_name(Fl_Font, int* attributes = 0);
+  static int get_font_sizes(Fl_Font, int*& sizep);
+  static void set_font(Fl_Font, const char*);
+  static void set_font(Fl_Font, Fl_Font);
+  static Fl_Font set_fonts(const char* = 0);
 
   // labeltypes:
-  static FL_EXPORT void set_labeltype(Fl_Labeltype,Fl_Label_Draw_F*,Fl_Label_Measure_F*);
-  static FL_EXPORT void set_labeltype(Fl_Labeltype, Fl_Labeltype from);
+  static void set_labeltype(Fl_Labeltype,Fl_Label_Draw_F*,Fl_Label_Measure_F*);
+  static void set_labeltype(Fl_Labeltype, Fl_Labeltype from);
 
   // boxtypes:
-  static FL_EXPORT void set_boxtype(Fl_Boxtype, Fl_Box_Draw_F*,uchar,uchar,uchar,uchar);
-  static FL_EXPORT void set_boxtype(Fl_Boxtype, Fl_Boxtype from);
-  static FL_EXPORT int box_dx(Fl_Boxtype);
-  static FL_EXPORT int box_dy(Fl_Boxtype);
-  static FL_EXPORT int box_dw(Fl_Boxtype);
-  static FL_EXPORT int box_dh(Fl_Boxtype);
-  static FL_EXPORT int draw_box_active();
+  static void set_boxtype(Fl_Boxtype, Fl_Box_Draw_F*,uchar,uchar,uchar,uchar);
+  static void set_boxtype(Fl_Boxtype, Fl_Boxtype from);
+  static int box_dx(Fl_Boxtype);
+  static int box_dy(Fl_Boxtype);
+  static int box_dw(Fl_Boxtype);
+  static int box_dh(Fl_Boxtype);
+  static int draw_box_active();
 
   // back compatability:
-  static FL_EXPORT void set_abort(void (*f)(const char*,...)) {fatal = f;}
-  static FL_EXPORT void (*atclose)(Fl_Window*,void*);
-  static FL_EXPORT void default_atclose(Fl_Window*,void*);
-  static FL_EXPORT void set_atclose(void (*f)(Fl_Window*,void*)) {atclose = f;}
-  static FL_EXPORT int event_shift() {return e_state&FL_SHIFT;}
-  static FL_EXPORT int event_ctrl() {return e_state&FL_CTRL;}
-  static FL_EXPORT int event_alt() {return e_state&FL_ALT;}
-  static FL_EXPORT int event_buttons() {return e_state&0x7f000000;}
-  static FL_EXPORT int event_button1() {return e_state&FL_BUTTON1;}
-  static FL_EXPORT int event_button2() {return e_state&FL_BUTTON2;}
-  static FL_EXPORT int event_button3() {return e_state&FL_BUTTON3;}
-  static FL_EXPORT void set_idle(void (*cb)()) {idle = cb;}
-  static FL_EXPORT void grab(Fl_Window&w) {grab(&w);}
-  static FL_EXPORT void release() {grab(0);}
+  static void set_abort(void (*f)(const char*,...)) {fatal = f;}
+  static void (*atclose)(Fl_Window*,void*);
+  static void default_atclose(Fl_Window*,void*);
+  static void set_atclose(void (*f)(Fl_Window*,void*)) {atclose = f;}
+  static int event_shift() {return e_state&FL_SHIFT;}
+  static int event_ctrl() {return e_state&FL_CTRL;}
+  static int event_alt() {return e_state&FL_ALT;}
+  static int event_buttons() {return e_state&0x7f000000;}
+  static int event_button1() {return e_state&FL_BUTTON1;}
+  static int event_button2() {return e_state&FL_BUTTON2;}
+  static int event_button3() {return e_state&FL_BUTTON3;}
+  static void set_idle(void (*cb)()) {idle = cb;}
+  static void grab(Fl_Window&w) {grab(&w);}
+  static void release() {grab(0);}
 
   // Visible focus methods...
   static void visible_focus(int v) { visible_focus_ = v; }
@@ -244,14 +244,14 @@ public:
   static int  dnd_text_ops() { return dnd_text_ops_; }
 
   // Multithreading support:
-  static FL_EXPORT void lock();
-  static FL_EXPORT void unlock();
-  static FL_EXPORT void awake(void* message = 0);
-  static FL_EXPORT void* thread_message();
+  static void lock();
+  static void unlock();
+  static void awake(void* message = 0);
+  static void* thread_message();
 };
 
 #endif // !Fl_H
 
 //
-// End of "$Id: Fl.H,v 1.8.2.11.2.16 2002/07/08 15:14:37 easysw Exp $".
+// End of "$Id: Fl.H,v 1.8.2.11.2.17 2002/07/14 19:08:25 easysw Exp $".
 //
