@@ -1,5 +1,5 @@
 //
-// "$Id: Fl_Wizard.H,v 1.1.2.2 2002/01/01 15:11:28 easysw Exp $"
+// "$Id: Fl_Wizard.H,v 1.1.2.3 2002/07/14 19:08:25 easysw Exp $"
 //
 // Fl_Wizard widget definitions.
 //
@@ -37,11 +37,11 @@
 // Fl_Wizard class...
 //
 
-class Fl_Wizard : public Fl_Group
+class FL_EXPORT Fl_Wizard : public Fl_Group
 {
   Fl_Widget *value_;
 
-  void draw();
+  FL_EXPORT void draw();
 
   public:
 
@@ -56,5 +56,5 @@ class Fl_Wizard : public Fl_Group
 #endif // !_Fl_Wizard_H_
 
 //
-// End of "$Id: Fl_Wizard.H,v 1.1.2.2 2002/01/01 15:11:28 easysw Exp $".
+// End of "$Id: Fl_Wizard.H,v 1.1.2.3 2002/07/14 19:08:25 easysw Exp $".
 //
