@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.0
 
+	- Cleaned up the WIN32 export definitions for some of
+	  the widget classes.
 	- Fixed a filename completion bug when changing
 	  directories.
 	- Fl_File_Chooser::value() would return directories with
